[package]
name = "distributed_rate_limiter"
version = "0.1.3"
edition = "2024"
authors = ["eftychis <eftychis@users.noreply.github.com>"]
description = "Distributed Rate Limiter"
license = "MIT"
repository = "https://github.com/eftychis/distributed_rate_limiter"
keywords = ["distributed", "rate-limiter", "credit-bucket"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.9.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rate_limiter"
harness = false
